// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`렌더 트리 스냅샷 — 이후 변경을 잡는 기준선(예전 화면과의 대조가 아니다) 탭 화면 · 헤더 있음 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F2F0E2",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <RNCMaskedView
      style={
        {
          "flex": 1,
        }
      }
      testID="screen-fade"
    >
      <View
        pointerEvents="none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <ViewManagerAdapter_ExpoLinearGradient
            colors={
              [
                0,
                0,
                100663296,
                436207616,
                1073741824,
                1996488704,
                3053453312,
                3925868544,
                4278190080,
              ]
            }
            endPoint={
              [
                0.5,
                1,
              ]
            }
            locations={
              [
                0,
                0.125,
                0.25,
                0.375,
                0.5,
                0.625,
                0.75,
                0.875,
                1,
              ]
            }
            startPoint={
              [
                0.5,
                0,
              ]
            }
            style={
              {
                "height": 59,
              }
            }
            testID="screen-fade-top"
          />
          <View
            style={
              {
                "backgroundColor": "#000",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
              }
            }
          />
          <ViewManagerAdapter_ExpoLinearGradient
            colors={
              [
                4278190080,
                3925868544,
                3053453312,
                1996488704,
                1073741824,
                436207616,
                100663296,
                0,
                0,
              ]
            }
            endPoint={
              [
                0.5,
                1,
              ]
            }
            locations={
              [
                0,
                0.125,
                0.25,
                0.375,
                0.5,
                0.625,
                0.75,
                0.875,
                1,
              ]
            }
            startPoint={
              [
                0.5,
                0,
              ]
            }
            style={
              {
                "height": 74.5,
              }
            }
            testID="screen-fade-bottom"
          />
        </View>
      </View>
      <RCTScrollView
        contentContainerStyle={
          {
            "columnGap": 16,
            "paddingBottom": 115,
            "rowGap": 16,
          }
        }
        indicatorStyle="black"
        style={
          {
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
            "marginBottom": 0,
            "marginTop": 0,
          }
        }
        testID="screen-scroll"
      >
        <View>
          <View
            testID="header"
          />
          <Text>
            목록
          </Text>
        </View>
      </RCTScrollView>
    </RNCMaskedView>
  </View>
</RNCSafeAreaProvider>
`;

exports[`렌더 트리 스냅샷 — 이후 변경을 잡는 기준선(예전 화면과의 대조가 아니다) 하위 페이지 · 헤더 없음 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F2F0E2",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <RNCMaskedView
      style={
        {
          "flex": 1,
        }
      }
      testID="screen-fade"
    >
      <View
        pointerEvents="none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#000",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
              }
            }
          />
          <ViewManagerAdapter_ExpoLinearGradient
            colors={
              [
                4278190080,
                3925868544,
                3053453312,
                1996488704,
                1073741824,
                436207616,
                100663296,
                0,
                0,
              ]
            }
            endPoint={
              [
                0.5,
                1,
              ]
            }
            locations={
              [
                0,
                0.125,
                0.25,
                0.375,
                0.5,
                0.625,
                0.75,
                0.875,
                1,
              ]
            }
            startPoint={
              [
                0.5,
                0,
              ]
            }
            style={
              {
                "height": 34,
              }
            }
            testID="screen-fade-bottom"
          />
        </View>
      </View>
      <RCTScrollView
        contentContainerStyle={
          {
            "columnGap": 16,
            "paddingBottom": 34,
            "rowGap": 16,
          }
        }
        indicatorStyle="black"
        style={
          {
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
            "marginBottom": 0,
            "marginTop": 59,
          }
        }
        testID="screen-scroll"
      >
        <View>
          <Text>
            목록
          </Text>
        </View>
      </RCTScrollView>
    </RNCMaskedView>
  </View>
</RNCSafeAreaProvider>
`;
